use react router and history API

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "gh-pages": "^1.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "todomvc-app-css": "^2.1.2",
     "todomvc-common": "^1.0.5"
@@ -16,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "yarn build",
+    "deploy": "cp ./build/index.html ./build/404.html && gh-pages -d build"
   }
 }
