--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,8 +8,8 @@
       "type": "image/x-icon"
     }
   ],
-  "start_url": "./index.html",
+  "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#f5f5f5",
   "background_color": "#f5f5f5"
 }
