--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
       "type": "image/x-icon"
     }
   ],
-  "display": "standalone",
+  "display": "fullscreen",
   "theme_color": "#f5f5f5",
   "background_color": "#f5f5f5"
 }
