--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
       "type": "image/x-icon"
     }
   ],
-  "display": "fullscreen",
+  "start_url": ".",
+  "display": "standalone",
   "theme_color": "#f5f5f5",
   "background_color": "#f5f5f5"
 }
