--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,8 +8,7 @@
       "type": "image/x-icon"
     }
   ],
-  "start_url": ".",
-  "display": "standalone",
+  "display": "fullscreen",
   "theme_color": "#f5f5f5",
   "background_color": "#f5f5f5"
 }
