--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "homepage": "http://olebedev.github.io/todo",
   "dependencies": {
+    "@swarm/db": "^0.1.2",
+    "@swarm/react": "^0.1.2",
+    "flow-bin": "0.66",
     "gh-pages": "^1.1.0",
     "is-touch-device": "^1.0.1",
     "react": "^16.2.0",
